webdrivermanager (1.3.2)

  + Add PhantomJS support (pull request #13 from wilx/master-phantomjs)

 -- Boni Garcia <boni.gg@gmail.com>  Wen, 13 Jan 2016 20:09:00 +0200


webdrivermanager (1.3.1)

  + Check that existing binaries are valid before exporting variable
  + Change log level of important messages to INFO
  + Retries when seeking remote URL to find out latest version of binaries

 -- Boni Garcia <boni.gg@gmail.com>  Sat, 07 Nov 2015 18:03:00 +0200


webdrivermanager (1.3.0)

  + Support for Microsoft Edge

 -- Boni Garcia <boni.gg@gmail.com>  Tue, 01 Nov 2015 09:48:00 +0200


webdrivermanager (1.2.4)

  + Assess that binary exists in cache to avoid seeking remote server

 -- Boni Garcia <boni.gg@gmail.com>  Tue, 20 Oct 2015 15:03:00 +0200


webdrivermanager (1.2.3)

  + Bug-fix: redirection of setup call to the proper method

 -- Boni Garcia <boni.gg@gmail.com>  Tue, 01 Sep 2015 10:52:00 +0200


webdrivermanager (1.2.2)

  + Improved automatic discover of latest version to be downloaded (GitHub issue #5)
  + Improved test coverage
  + Changed log level to DEBUG

 -- Boni Garcia <boni.gg@gmail.com>  Wed, 19 Aug 2015 10:29:00 +0200


webdrivermanager (1.2.1)

  + Improved driver version management
  + Added getter to read the downloaded version

 -- Boni Garcia <boni.gg@gmail.com>  Fri, 14 Aug 2015 01:18:00 +0200


webdrivermanager (1.2.0)

  + Thread safe download. Pull request thanks to Ivan Gracia (izanmail@gmail.com)

 -- Boni Garcia <boni.gg@gmail.com>  Tue, 7 Jul 2015 13:18:40 +0200


webdrivermanager (1.1.2)

  + Manager classes as singlentons

 -- Boni Garcia <boni.gg@gmail.com>  Mon, 6 Jul 2015 15:02:15 +0200


webdrivermanager (1.1.1)

  + Added provided scope to slf4j-simple
  + Bug-fix: store binary in path using version instead of LATEST

 -- Boni Garcia <boni.gg@gmail.com>  Tue, 23 Jun 2015 11:42:01 +0200


webdrivermanager (1.1.0)

  + Changed log dependency from slf4j-log4j12 to slf4j-simple