@@ -38,7 +38,7 @@ public class ChromeVersionTest {
 	@Test
 	public void testSpecificVersions() throws Exception {
 		String[] specificVersions = { "2.10", "2.11", "2.12", "2.13", "2.14",
-				"2.15", "2.16", "2.17", "2.18", "2.19", "2.20" };
+				"2.15", "2.16", "2.17", "2.18", "2.19", "2.20", "2.21" };
 
 		for (String specificVersion : specificVersions) {
 			ChromeDriverManager.getInstance().setup(specificVersion);
