@@ -1,5 +1,5 @@
 /*
- * (C) Copyright 2015 Boni Garcia (http://bonigarcia.github.io/)
+ * (C) Copyright 2016 Boni Garcia (http://bonigarcia.github.io/)
  *
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the GNU Lesser General Public License
@@ -14,52 +14,57 @@
  */
 package io.github.bonigarcia.wdm.test;
 
-import io.github.bonigarcia.wdm.MarionetteDriverManager;
 import org.apache.commons.lang3.SystemUtils;
 import org.junit.After;
 import org.junit.Before;
 import org.junit.BeforeClass;
+import org.junit.Ignore;
 import org.junit.Test;
 import org.openqa.selenium.firefox.MarionetteDriver;
 import org.openqa.selenium.remote.DesiredCapabilities;
+
+import io.github.bonigarcia.wdm.MarionetteDriverManager;
 
 /**
  * Test with Marionette browser.
  *
  * @author Boni Garcia (boni.gg@gmail.com)
- * @since 1.3.2
+ * @since 1.4.0
  */
-public class MarionetteTest extends ManagerTest{
+public class MarionetteTest extends ManagerTest {
 
-    @BeforeClass
-    public static void setupClass() {
-        MarionetteDriverManager.getInstance().setup();
-    }
+	@BeforeClass
+	public static void setupClass() {
+		MarionetteDriverManager.getInstance().setup();
+	}
 
-    @Before
-    public void setupTest() {
-        DesiredCapabilities capabilities = DesiredCapabilities.firefox();
-        capabilities.setCapability("marionette", true);
-        // This capability set need for beta\dev\nightly(version 45+) firefox because this driver is target on it
-        if (SystemUtils.IS_OS_LINUX) {
-            capabilities.setCapability("binary", "/usr/bin/firefox");
-        } else if (SystemUtils.IS_OS_WINDOWS) {
-            capabilities.setCapability("binary", "C:\\Program Files\\Mozilla Firefox\\firefox.exe");
-        } else if (SystemUtils.IS_OS_MAC_OSX) {
-            capabilities.setCapability("binary", "/Applications/Firefox.app");
-        }
-        driver = new MarionetteDriver(capabilities);
-    }
+	@Before
+	public void setupTest() {
+		DesiredCapabilities capabilities = DesiredCapabilities.firefox();
+		capabilities.setCapability("marionette", true);
+		// This capability set need for beta\dev\nightly(version 45+) firefox
+		// because this driver is target on it
+		if (SystemUtils.IS_OS_LINUX) {
+			capabilities.setCapability("binary", "/usr/bin/firefox");
+		} else if (SystemUtils.IS_OS_WINDOWS) {
+			capabilities.setCapability("binary",
+					"C:\\Program Files\\Mozilla Firefox\\firefox.exe");
+		} else if (SystemUtils.IS_OS_MAC_OSX) {
+			capabilities.setCapability("binary", "/Applications/Firefox.app");
+		}
+		driver = new MarionetteDriver(capabilities);
+	}
 
-    @After
-    public void tearDown() {
-        if (driver != null) {
-            driver.quit();
-        }
-    }
+	@After
+	public void tearDown() {
+		if (driver != null) {
+			driver.quit();
+		}
+	}
 
-    @Test
-    public void testMarionette() {
-        browseWikipedia();
-    }
+	@Ignore
+	@Test
+	public void testMarionette() {
+		browseWikipedia();
+	}
 }
