@@ -30,7 +30,7 @@ import io.github.bonigarcia.wdm.PhantomJsDriverManager;
  * Test with PhatomJS.
  *
  * @author Boni Garcia (boni.gg@gmail.com)
- * @since 1.3.2
+ * @since 1.4.0
  */
 public class PhantomJsTest extends ManagerTest {
 
