@@ -24,7 +24,7 @@ import io.github.bonigarcia.wdm.PhantomJsDriverManager;
  * Test asserting PhatomJS versions.
  *
  * @author Boni Garcia (boni.gg@gmail.com)
- * @since 1.3.2
+ * @since 1.4.0
  */
 public class PhantomJsVersionTest {
 
